--- a/client/src/css/textinput.css
+++ b/client/src/css/textinput.css
@@ -2,6 +2,8 @@
     font-size: 36px;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
 .text-input {
